--- a/1 DPS-not.ipynb
+++ b/1 DPS-not.ipynb
@@ -275,7 +275,7 @@
     "        return len(self.X_data)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        x = torch.tensor(self.X_data[idx], dtype=torch.float32)  # 转换为 Tensor\n",
+    "        x = torch.tensor(self.X_data[idx], dtype=torch.float32)  \n",
     "        return x   \n",
     "                    \n",
     "dataset = MyDataset(train_data)    \n",
@@ -407,9 +407,7 @@
     "# ema.load_state_dict(torch.load( \"./checkpoint/weather_ema.pth\"  ))\n",
     "\n",
     "# model.load_state_dict(torch.load( \"./checkpoint/MuJoCo.pth\"  ))\n",
-    "# ema.load_state_dict(torch.load( \"./checkpoint/MuJoCo_ema.pth\"  ))\n",
-    "\n",
-    "\n"
+    "# ema.load_state_dict(torch.load( \"./checkpoint/MuJoCo_ema.pth\"  ))\n"
    ]
   },
   {
@@ -594,11 +592,11 @@
     "\n",
     "    ix_lower = Xnan[:, :int(D / 2)] < lower_bound\n",
     "    ix_higher = Xnan[:, :int(D / 2)] > upper_bound\n",
-    "    Xnan[:, :int(D / 2)][ix_lower | ix_higher] = np.nan  # 过大过小的去掉 换成nan\n",
+    "    Xnan[:, :int(D / 2)][ix_lower | ix_higher] = np.nan  \n",
     "    Xnan = Xnan.astype(np.float32)\n",
     "    \n",
     "    Xz = Xnan.copy()\n",
-    "    Xz[np.isnan(Xnan)] = 0    # 换成0\n",
+    "    Xz[np.isnan(Xnan)] = 0   \n",
     "\n",
     "    return Xnan, Xz\n",
     "\n",
@@ -649,110 +647,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "270ae329",
+   "cell_type": "markdown",
+   "id": "20548324",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                               | 25/30000 [00:02<40:07, 12.45it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15612\\1948723382.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m30000\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms_train\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[1;33m:\u001b[0m   \u001b[1;31m# [1000, 24, 8]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mp_s_given_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclassi\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    679\u001b[0m                 \u001b[1;31m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    680\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[call-arg]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 681\u001b[1;33m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    682\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    683\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIterable\u001b[0m \u001b[1;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    719\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_next_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    720\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_next_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# may raise StopIteration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 721\u001b[1;33m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_dataset_fetcher\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# may raise StopIteration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    722\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_pin_memory\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    723\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_utils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpin_memory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpin_memory\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_pin_memory_device\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py\u001b[0m in \u001b[0;36mfetch\u001b[1;34m(self, possibly_batched_index)\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpossibly_batched_index\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollate_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\_utils\\collate.py\u001b[0m in \u001b[0;36mdefault_collate\u001b[1;34m(batch)\u001b[0m\n\u001b[0;32m    173\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 175\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mdefault_collate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msamples\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtransposed\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# Backwards compatibility.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    176\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\_utils\\collate.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    173\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 175\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mdefault_collate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msamples\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtransposed\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# Backwards compatibility.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    176\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\_utils\\collate.py\u001b[0m in \u001b[0;36mdefault_collate\u001b[1;34m(batch)\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[0mstorage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0melem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstorage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_new_shared\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    140\u001b[0m             \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0melem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnew\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstorage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresize_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 141\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    142\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0melem_type\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__module__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'numpy'\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0melem_type\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'str_'\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    143\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0melem_type\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'string_'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "losslist1 = []\n",
-    "losslist2 = []\n",
-    "\n",
-    "for i in tqdm( range(30000) ):\n",
-    "    \n",
-    "    for x_train, s_train in train_loader:   # [1000, 24, 8]\n",
-    "\n",
-    "        p_s_given_x = classi(x_train)\n",
-    "        \n",
-    "        # 这个值考虑除以D 因为求的是每一行的和 如果后面直接求mean 那么就等于少除了D \n",
-    "        # 所以这里应该处理D \n",
-    "        # 或者不要求和 只计算值 然后一次性求均值\n",
-    "#         log_p_s_given_x = torch.sum( p_s_given_x.log_prob( s_train ), dim=-1 )/D \n",
-    "        \n",
-    "        '一次性求均值 效果和上面一样'\n",
-    "        log_p_s_given_x =  p_s_given_x.log_prob( s_train )\n",
-    "\n",
-    "\n",
-    "        '用第一个loss效果好一些 最终应该差不多'\n",
-    "        loss = -torch.mean(log_p_s_given_x)\n",
-    "\n",
-    "        losslist1.append(loss.item())\n",
-    "        losslist2.append(log_p_s_given_x.mean().item())\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        \n",
-    "plt.figure(figsize=(5, 3))\n",
-    "plt.plot(losslist1, label='loss')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
-    "\n",
-    "plt.figure(figsize=(5, 3))\n",
-    "plt.plot(losslist2, label='log_p_s_given_x')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
-    "\n",
-    "# plt.savefig('mnar分类器loss.pdf',dpi=500, bbox_inches='tight' )"
+    "# train MNAR classifier "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6f60174d",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "270ae329",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/sp500_rm_around_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/sp500_rm_superior_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/sp500_rm_extre_val.pth\" )\n",
+    "# losslist1 = []\n",
+    "# losslist2 = []\n",
     "\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/ETT_rm_around_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/ETT_rm_superior_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/ETT_rm_extre_val.pth\" )\n",
+    "# for i in tqdm( range(30000) ):\n",
+    "    \n",
+    "#     for x_train, s_train in train_loader:   # [1000, 24, 8]\n",
     "\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/ER_rm_around_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/ER_rm_superior_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/ER_rm_extre_val.pth\" )\n",
+    "#         p_s_given_x = classi(x_train)\n",
+    "        \n",
+    "        \n",
+    "#         log_p_s_given_x =  p_s_given_x.log_prob( s_train )\n",
     "\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/Energy_rm_around_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/Energy_rm_superior_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/Energy_rm_extre_val.pth\" )\n",
     "\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/Weather_rm_around_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/Weather_rm_superior_mean_val.pth\" )\n",
-    "# torch.save( classi.state_dict(),\"./checkpoint/mnar_classifier/Weather_rm_extre_val.pth\" )"
+    "#         '用第一个loss效果好一些 最终应该差不多'\n",
+    "#         loss = -torch.mean(log_p_s_given_x)\n",
+    "\n",
+    "#         losslist1.append(loss.item())\n",
+    "#         losslist2.append(log_p_s_given_x.mean().item())\n",
+    "\n",
+    "#         optimizer.zero_grad()\n",
+    "#         loss.backward()\n",
+    "#         optimizer.step()\n",
+    "        \n",
+    "        \n",
+    "# plt.figure(figsize=(5, 3))\n",
+    "# plt.plot(losslist1, label='loss')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()\n",
+    "\n",
+    "# plt.figure(figsize=(5, 3))\n",
+    "# plt.plot(losslist2, label='log_p_s_given_x')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb0ae32e",
+   "metadata": {},
+   "source": [
+    "# load trained MNAR classifier"
    ]
   },
   {
